<resources>
    <string name="app_name">ATM Consultoria</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">ATM Consultoria</string>
    <string name="nav_header_subtitle">atmconsultoria@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">ATM Consultoria</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="Principal">Principal</string>
    <string name="serviços">Serviços</string>
    <string name="clientes">Clientes</string>
    <string name="Contato">Contato</string>
    <string name="menu_sobre">Sobre</string>
    <string name="sistema_de_gest_o_de_qualidade">Sistema de Gestão de Qualidade</string>
</resources>
